<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edukate</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Questions</string>
    <string name="title_section5">News Feed</string>
    <string name="title_section6">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="page1_label">Your best source of answers</string>
    <string name="page2_label">Get answers for your question.Instantly.</string>
    <string name="page4_label">Follow other institutes and excel</string>
    <string name="page3_label">Answer questions and earn credits</string>
    <string name="login_label">Existing User</string>
    <string name="signUp_label">New User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usernameLabel">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="signIn">SIGN IN</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="institute_label">Institute</string>
    <string name="signUpText">SIGN UP</string>
    <string name="title_activity_email_verified">EmailVerifiedActivity</string>
    <string name="email_verfied">Please verify your email !</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="email_unverfied">Your Account has been created. To access your account you need to verify your account first.</string>
    <string name="refresh_button">Refresh</string>
    <string name="refresh_label">REFRESH</string>
    <string name="question_button_dialog">Post</string>
    <string name="question_add_dialog_text">Add Question</string>
    <string name="question_text">What is your question?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="location_label">Location</string>
    <string name="graduation_label">Graduation Year</string>
    <string name="interests_label">Interests</string>
    <string name="user_welcome_label">Welcome</string>
    <string name="uploadImageButton">Add Image</string>
    <string name="continue_button_label">Continue</string>
    <string name="title_activity_choose_photo">ChoosePhotoActivity</string>
    <string name="uploadFinalButton">Upload</string>
    <string name="upvoteLabel">Upvote</string>
    <string name="downvoteLabel">Downvote</string>
    <string name="answerLabel">Answer</string>
    <string name="testingString">What is the height of mount everest ?</string>
    <string name="testingAnswerString">No answers yet.</string>
    <string name="testingUpvotesString">100 upvotes</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="answerButtonLabel">Write Answer</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="app_creator_name">Navneet M Kumar</string>
    <string name="app_creator_birthday">9 December 1995</string>
    <string name="app_creator_email">navneet.nmk@gmail.com</string>
    <string name="app_creator_college">LNMIIT</string>
    <string name="add_post_text">Add Post</string>
    <string name="title_activity_institute_profile">InstituteProfileActivity</string>
    <string name="about_us">About Us</string>
    <string name="about_institute">The LNM Institute of Information Technology (LNMIIT), is a deemed university located in Jaipur,             India, on an 100-acre (40 ha) campus.             The institute is a public-private partnership             between the Lakshmi Niwas Mittal and Usha Mittal foundation             and the Government of Rajasthan as an             autonomous non-profit organization.</string>
    <string name="instiute_details">Instiute Details</string>
    <string name="institute_details_text">The LNM Institute of Information Technology, is a deemed university located in Jaipur, India, on an 100-acre campus.\nAddress: Rupa Ki Nangal, Via-Jamdoli, Sumel, Jaipur, Rajasthan 302031\nPhone: 0141 518 9211\nFounded: 2003</string>

</resources>
