<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edukate.EditProfileActivity" >

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/user_welcome_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/welcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:id="@+id/interestEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueButton"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/interests_label" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:layout_toRightOf="@+id/uploadButton"
        android:text="@string/continue_button_label" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerYears"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/location_label" />

    <Spinner
        android:id="@+id/spinnerYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/interestEditText"
        android:layout_below="@+id/locationEditText"
        android:layout_marginTop="17dp" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/uploadImageButton" />

</RelativeLayout>
