<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/listviewlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:id="@+id/poststext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/testingAnswerString"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/upvotesTextAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/poststext"
            android:layout_below="@+id/poststext"
            android:layout_marginTop="26dp"
            android:padding="8dp"
            android:text="@string/testingUpvotesString"
            android:textSize="13sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/upvoteButtonAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/upvotesTextAnswers"
            android:layout_marginTop="22dp"
            android:text="@string/upvoteLabel" />

        <Button
            android:id="@+id/downvoteButtonAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/upvoteButtonAnswers"
            android:layout_alignBottom="@+id/upvoteButtonAnswers"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:text="@string/downvoteLabel" />

    </RelativeLayout>

</LinearLayout>