<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/listviewlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:id="@+id/questionUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/testingString"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/answerUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionUserText"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/testingAnswerString" />

        <TextView
            android:id="@+id/upvotequestionUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/answerUserText"
            android:layout_below="@+id/answerUserText"
            android:padding="8dp"
            android:text="@string/testingUpvotesString"
            android:textSize="13sp"
            android:textStyle="italic" />

    </RelativeLayout>

</LinearLayout>