<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   >
     <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/stdybackground" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profilePicture"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:text="@string/app_creator_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/userDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userInstitute"
        android:layout_below="@+id/userInstitute"
        android:text="@string/location_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userDOB"
        android:layout_below="@+id/userDOB"
        android:text="@string/app_creator_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userInstitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profilePicture"
        android:layout_below="@+id/profilePicture"
        android:layout_marginTop="41dp"
        android:text="@string/app_creator_college"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/questionsListUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userEmail"
        android:layout_marginTop="15dp" >
    </ListView>
  
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>