<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edukate.InstituteProfileActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/lnmiit" />

            <TextView
                android:id="@+id/instituteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/app_creator_college"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/listviewlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView1"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="7dp" >

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView3"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/instiute_details"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/aboutUs"
                    android:layout_marginTop="16dp"
                    android:text="@string/institute_details_text" />
            </RelativeLayout>
              <RelativeLayout
                android:id="@+id/listviewlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/listviewlayout1"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="7dp" >

                <TextView
                    android:id="@+id/instituteDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/instituteDetailsText"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/about_us"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/instituteDetailsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/instituteDetails"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_institute" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>